[package]
name = "web-flash"
version = "0.3.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
espflash = { version = "3.3.0", default-features = false }
clap = { version = "4.5.30", features = ["env", "derive"] }
opener = "0.7.2"
anyhow = "1.0.96"

# Needs it otherwise vscode rust-analyzer is not happy??
clap_builder = "4.5.30"
